# opencl_course

./: .gitignore  CMakeLists.txt  a_plus_b.cl  array_sum.cl  const.h  gemm1.c  gemm1.cl  gemm2.c  gemm2.cl  gemm3.c  gemm3.cl  gemm4.c  gemm4.cl  main.c  main_a_plus_b.c  main_array_sum.c  par_scan.c  par_scan.cl  par_scan2.c  par_scan2.cl
